--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title>Home / X</title>
         <link href="https://fonts.cdnfonts.com/css/helvetica-neue-55" rel="stylesheet">
         <link rel="stylesheet" href="Style.css">
+        <link href='https://abs.twimg.com/responsive-web/client-web/icon-ios.77d25eba.png' rel='image_src'/>
         <style>
             @import url('https://fonts.cdnfonts.com/css/helvetica-neue-55');
           html{
